# ollama-mcp

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  base_environment.yml  environment.yml  mcp_server.toml  pyproject.toml  requirements.txt  smithery.yaml  test_server.py  test_tools.py
.claude/: settings.local.json
examples/: usage_example.py
ollama_mcp_server/: __init__.py  cache.py  client.py  config.py  main.py  models.py
