[tool.poetry]
name = "ollama-mcp-server"
version = "0.1.0"
description = "An MCP server for interacting with Ollama's API."
authors = ["Cascade"] 

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
mcp = "^1.4.0"
httpx = "^0.27.0"
pydantic = "^2.0.0"
pydantic-settings = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
